syntax = "proto3";
package pokerchain.poker.v1;

option go_package = "github.com/yourusername/pokerchain/x/poker/types";

// ActionHistory defines the ActionHistory message.
message ActionHistory {
  string index = 1;
  uint64 game_id = 2;
  string round = 3;
  uint64 action_index = 4;
  string player_address = 5;
  string action_type = 6;
  uint64 amount = 7;
}
